--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css/style.css">
 
     <title>Slideshow</title>
@@ -16,15 +18,26 @@
     
 
 
+    <h1>Slideshow</h1>
+
+    <!-- slideshow container -->
     <div id="container">
 
-
-
-
-
-
-
         
+        <!-- arrow up -->
+        <div id="arrow-up">
+            <i class="fa-solid fa-circle-arrow-up"></i>
+        </div>
+
+        <!-- image -->
+        <img src="img/01.webp" alt="slideshow pic">
+
+        <!-- arrow down -->
+        <div id="arrow-down">
+            <i class="fa-solid fa-circle-arrow-down"></i>
+        </div>
+
+
 
     </div>
 
