--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <!-- slideshow container -->
     <div id="container">
 
-        
+
         <!-- arrow up -->
         <div id="arrow-up">
             <i class="fa-solid fa-circle-arrow-up"></i>
         </div>
 
         <!-- image -->
-        <img src="img/01.webp" alt="slideshow pic">
+        <img id="slideshow-image" alt="slideshow pic">
 
         <!-- arrow down -->
         <div id="arrow-down">
